# CivilizationOS

./: .env.example  .gitignore  BUILD_LOG.md  CLAUDE.md  CONTRIBUTING.md  HANDOFF_PHASE5.md  HANDOFF_PHASE6.md  HANDOFF_PHASE7.md  HANDOFF_PHASE8.md  HANDOFF_PHASE9.md  HOW_TO_RUN.md  MASTER_BUILD_LOG.md  PLAN_3D_CITY.md  README.md  pyproject.toml  requirements.txt  run.cmd
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
api/: __init__.py  config.py  main.py  requirements.txt
api/agents/: __init__.py  citizen.py  council.py  personas.py
api/llm/: __init__.py  router.py
api/memory/: __init__.py  causal_graph.py  stream.py  tcmf.py  vectorstore.py
api/sim/: __init__.py  crisis.py  engine.py  events.py  world.py
api/tests/: test_crisis.py  test_engine.py  test_memory_stream.py  test_router.py  test_run_cmd.py  test_tcmf.py  test_vectorstore.py
docs/: tcmf.md
handoffs/: HANDOFF-2026-06-18-2232.md  HANDOFF-2026-06-19.md  HANDOFF-2026-06-23-2107.md  HANDOFF-2026-07-21-2135.md  HANDOFF-2026-07-23-0202.md
ml/: Modelfile  generate_dataset.py  train_lora.ipynb
ml/dataset/: council_voices.jsonl  generate.py
ml/evals/: persona_eval.py
research/tcmf_paper/: FINDINGS.md  NIGHT_LOG.md  NIGHT_QUEUE.md  PAPER_PLAN.md  README.md
research/tcmf_paper/results_decision/: RESULTS_DECISION.md  llm_cache.json  results_decision.json
research/tcmf_paper/results_main/: RESULTS.md  results.json
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  ErrorBoundary.tsx  index.css  main.tsx
(+37 files in other folders)
